[package]
name = "check-dotenv"
version = "0.1.0"
authors = ["Antoine Prudhomme <antoineprudhomme5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
dialoguer = "0.6.2"
colored = "2.0.0"
